--- a/css/fonts.css
+++ b/css/fonts.css
@@ -2,5 +2,5 @@
 
 @font-face {
   font-family: "Roboto";
-  src: url("../fonts/Roboto/Roboto-Regular.ttf");
+  src: "../fonts/Roboto/Roboto-Regular.ttf";
 }
