--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,32 @@
 /* import fonts from fonts.css */
 
 @import url(./fonts.css);
+@import url(/css/partials/_variables.css);
 
-* {
-  margin: 0;
+/* Start Navigation */
+.header_area .main-menu .navbar .navbar-brand {
+  padding: 0 2rem 0 5rem;
 }
+
+.header_area .main-menu .navbar {
+  padding: 1rem 10rem;
+}
+
+.header_area .main-menu .nav-item .nav-link {
+  font-family: var(--roboto);
+  text-transform: uppercase;
+  font-weight: 500;
+  padding: 1.7rem;
+  color: var(--title-color);
+}
+
+.header_area .main-menu .navbar-nav .active a {
+  background: var(--gradient-color);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+/* .header_area .main-menu .nav-item .nav-link:hover {
+  color: var(--primary-color); */
+
+/* End Navigation */
