--- a/css/partials/_global.css
+++ b/css/partials/_global.css
@@ -55,3 +55,8 @@ button {
   color: whitesmoke;
   box-shadow: var(--box-shadow);
 }
+
+p.para {
+  color: var(--text-color);
+  font: normal 500 16px/25px var(--roboto);
+}
